src/test/ui/error-codes/E0107.stderr
error[E0107]: wrong number of lifetime parameters: expected 2, found 1
  --> $DIR/E0107.rs:21:11
   |
21 |     buzz: Buzz<'a>,
   |           ^^^^^^^^ expected 2 lifetime parameters

error[E0107]: wrong number of lifetime parameters: expected 0, found 1
  --> $DIR/E0107.rs:24:10
   |
24 |     bar: Bar<'a>,
   |          ^^^^^^^ unexpected lifetime parameter

error[E0107]: wrong number of lifetime parameters: expected 1, found 3
  --> $DIR/E0107.rs:27:11
   |
27 |     foo2: Foo<'a, 'b, 'c>,
   |           ^^^^^^^^^^^^^^^ 2 unexpected lifetime parameters

error: aborting due to 3 previous errors

If you want more information on this error, try using "rustc --explain E0107"
